added header on mobile

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
       Serwis Komputerowy Adrian Keller - Serwis Komputerów i Laptopów Szczecin
       Centrum
     </title>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+    <script
+      src="https://kit.fontawesome.com/f840a980ae.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -16,5 +24,45 @@
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <header class="header">
+        <nav class="navigation">
+          <h2 class="navigation-logo">Logo</h2>
+          <div class="navigation-bar">
+            <div class="navigation-circle"></div>
+            <div class="navigation-bar--middle"></div>
+          </div>
+          <section class="navigation-open">
+            <div class="close-btn">
+              <div class="close-btn-line close-btn-line--1"></div>
+              <div class="close-btn-line close-btn-line--2"></div>
+            </div>
+            <ul class="navigation-list">
+              <li><a href="#" class="navigation-link">Strona główna</a></li>
+              <li><a href="#" class="navigation-link">O nas</a></li>
+              <li><a href="#" class="navigation-link">Cennik</a></li>
+              <li><a href="#" class="navigation-link">Sklep</a></li>
+              <li><a href="#" class="navigation-link">Kontakt</a></li>
+            </ul>
+          </section>
+        </nav>
+
+        <section class="header-content">
+          <h1 class="header-content-title">Serwis Komputerowy Adrian Keller</h1>
+          <p class="header-content-description">
+            Odkryj niezawodne rozwiązania dla Twojego biznesu dzięki serwisowi
+            Adrian Keller! Nasza ekspertyza w dziedzinie technologii i
+            innowacyjnych rozwiązań pozwoli Ci zwiększyć wydajność,
+            zoptymalizować procesy i osiągnąć sukces.
+          </p>
+          <button class="header-content-btn">
+            <a href="#">Czytaj więcej</a>
+            <span class="material-symbols-outlined"> east </span>
+          </button>
+        </section>
+      </header>
+    </div>
+    <script src="script.js"></script>
+  </body>
 </html>
