added desktop style

--- a/index.html
+++ b/index.html
@@ -42,7 +42,11 @@
               <li><a href="#" class="navigation-link">Strona główna</a></li>
               <li><a href="#" class="navigation-link">O nas</a></li>
               <li><a href="#" class="navigation-link">Cennik</a></li>
-              <li><a href="#" class="navigation-link">Sklep</a></li>
+              <li>
+                <a href="#" class="navigation-link navigation-link-shop"
+                  >Sklep</a
+                >
+              </li>
               <li><a href="#" class="navigation-link">Kontakt</a></li>
             </ul>
           </section>
@@ -61,6 +65,7 @@
             <span class="material-symbols-outlined"> east </span>
           </button>
         </section>
+        <img src="Ellipse 1.svg" alt="" />
       </header>
     </div>
     <script src="script.js"></script>
