added new section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;600;700;800;900;1000&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -65,8 +65,71 @@
             <span class="material-symbols-outlined"> east </span>
           </button>
         </section>
-        <img src="Ellipse 1.svg" alt="" />
+        <img src="Ellipse 1.svg" alt="zdjecie urządzenia" />
       </header>
+      <main>
+        <section class="our-history">
+          <span class="history-subtitle">Nasza historia</span>
+          <h2 class="history-title">Zespół Ekspertów w Świecie Komputerów</h2>
+          <div class="history-boxes">
+            <div class="history-box">
+              <div class="history-box-square">
+                <img src="puchar.svg" alt="ikona pucharu" />
+              </div>
+              <h3>
+                Eksperci w dziedzinie <br />
+                technologii
+              </h3>
+              <p class="history-description">
+                Dzięki naszemu doświadczeniu i pasji do technologii, możemy
+                skutecznie rozwiązywać problemy i zapewniać najwyższą jakość
+                usług.
+              </p>
+            </div>
+            <div class="history-box">
+              <div class="history-box-square">
+                <img src="klient.svg" alt="ikona pucharu" />
+              </div>
+              <h3>
+                Dbałość o każdego <br />
+                klienta
+              </h3>
+              <p class="history-description">
+                Naszym priorytetem jest satysfakcja klienta. Zawsze staramy się
+                zapewnić kompleksową obsługę, zrozumieć indywidualne potrzeby i
+                dostosować nasze usługi do oczekiwań klientów.
+              </p>
+            </div>
+            <div class="history-box">
+              <div class="history-box-square">
+                <img src="idea.svg" alt="ikona pucharu" />
+              </div>
+              <h3>
+                Innowacyjne rozwiązania <br />
+                technologiczne
+              </h3>
+              <p class="history-description">
+                Jesteśmy na bieżąco z najnowszymi osiągnięciami w dziedzinie
+                serwisu komputerowego i stale doskonalimy nasze umiejętności.
+              </p>
+            </div>
+            <div class="history-box">
+              <div class="history-box-square">
+                <img src="stars.svg" alt="ikona pucharu" />
+              </div>
+              <h3>
+                Zaufanie, solidność, <br />
+                doskonałość
+              </h3>
+              <p class="history-description">
+                Dzięki naszemu doświadczeniu i pasji do technologii, możemy
+                skutecznie rozwiązywać problemy i zapewniać najwyższą jakość
+                usług.
+              </p>
+            </div>
+          </div>
+        </section>
+      </main>
     </div>
     <script src="script.js"></script>
   </body>
