--- a/index.html
+++ b/index.html
@@ -221,12 +221,12 @@
               </div>
               <div class="carousel-item">
                 <div class="costs-box">
-                  <div class="costs-level">Podstawowy</div>
+                  <div class="costs-level">Profesjonalny</div>
                   <p class="costs-description">
-                    Pakiet idealny dla tych, którzy potrzebują solidnej pomocy
-                    bez nadmiernych kosztów.
+                    Zapewniamy kompleksową diagnostykę, naprawę, instalację
+                    oprogramowania, oraz priorytetowe wsparcie online.
                   </p>
-                  <h3 class="costs-cost">Od 100zł / brutto</h3>
+                  <h3 class="costs-cost">Od 200zł / brutto</h3>
                   <span class="cost-time">za miesiąc</span>
                   <div class="costs-packs">
                     <div class="costs-pack">
@@ -255,14 +255,14 @@
                         Aktualizacje oprogramowania i zabezpieczeń.
                       </p>
                     </div>
-                    <div class="costs-pack costs-pack-disabled">
-                      <img src="close.svg" alt="znaczek akceptacji" />
+                    <div class="costs-pack">
+                      <img src="check.svg" alt="znaczek akceptacji" />
                       <p class="costs-pack-desciption">
                         Szybki czas reakcji i priorytetowe wsparcie techniczne.
                       </p>
                     </div>
-                    <div class="costs-pack costs-pack-disabled">
-                      <img src="close.svg" alt="znaczek akceptacji" />
+                    <div class="costs-pack">
+                      <img src="check.svg" alt="znaczek akceptacji" />
                       <p class="costs-pack-desciption">
                         Usuwanie wirusów i malware'u.
                       </p>
@@ -278,12 +278,12 @@
               </div>
               <div class="carousel-item">
                 <div class="costs-box">
-                  <div class="costs-level">Podstawowy</div>
+                  <div class="costs-level">Premium</div>
                   <p class="costs-description">
-                    Pakiet idealny dla tych, którzy potrzebują solidnej pomocy
-                    bez nadmiernych kosztów.
+                    Dla najbardziej wymagających. To rozwiązanie dla tych,
+                    którzy cenią sobie najwyższą jakość obsługi.
                   </p>
-                  <h3 class="costs-cost">Od 100zł / brutto</h3>
+                  <h3 class="costs-cost">Od 500zł / brutto</h3>
                   <span class="cost-time">za miesiąc</span>
                   <div class="costs-packs">
                     <div class="costs-pack">
@@ -312,20 +312,20 @@
                         Aktualizacje oprogramowania i zabezpieczeń.
                       </p>
                     </div>
-                    <div class="costs-pack costs-pack-disabled">
-                      <img src="close.svg" alt="znaczek akceptacji" />
+                    <div class="costs-pack">
+                      <img src="check.svg" alt="znaczek akceptacji" />
                       <p class="costs-pack-desciption">
                         Szybki czas reakcji i priorytetowe wsparcie techniczne.
                       </p>
                     </div>
-                    <div class="costs-pack costs-pack-disabled">
-                      <img src="close.svg" alt="znaczek akceptacji" />
+                    <div class="costs-pack">
+                      <img src="check.svg" alt="znaczek akceptacji" />
                       <p class="costs-pack-desciption">
                         Usuwanie wirusów i malware'u.
                       </p>
                     </div>
-                    <div class="costs-pack costs-pack-disabled">
-                      <img src="close.svg" alt="znaczek akceptacji" />
+                    <div class="costs-pack">
+                      <img src="check.svg" alt="znaczek akceptacji" />
                       <p class="costs-pack-desciption">
                         Priorytetowe wsparcie techniczne 24/7.
                       </p>
