--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             </div>
             <ul class="navigation-list">
               <li><a href="#" class="navigation-link">Strona główna</a></li>
-              <li><a href="#" class="navigation-link">O nas</a></li>
-              <li><a href="#" class="navigation-link">Cennik</a></li>
+              <li><a href="#history" class="navigation-link">O nas</a></li>
+              <li><a href="#costs" class="navigation-link">Cennik</a></li>
               <li>
                 <a href="#" class="navigation-link navigation-link-shop"
                   >Sklep</a
@@ -74,7 +74,7 @@
         <img src="Ellipse 1.svg" alt="zdjecie urządzenia" />
       </header>
       <main>
-        <section class="our-history">
+        <section id="history" class="our-history">
           <span class="history-subtitle">Nasza historia</span>
           <h2 class="history-title">Zespół Ekspertów w Świecie Komputerów</h2>
           <div class="history-boxes">
@@ -135,7 +135,7 @@
             </div>
           </div>
         </section>
-        <section class="costs">
+        <section id="costs" class="costs">
           <span class="costs-subtitle">Najlepsze ceny</span>
           <h2 class="costs-title">Cennik Naszych Profesjonalnych Rozwiązań</h2>
           <div id="carouselExampleIndicators" class="carousel slide">
@@ -166,8 +166,8 @@
                 <div class="costs-box">
                   <div class="costs-level">Podstawowy</div>
                   <p class="costs-description">
-                    Pakiet idealny dla tych, którzy potrzebują solidnej pomocy
-                    bez nadmiernych kosztów.
+                    Pakiet idealny dla wszystkich tych, którzy potrzebują
+                    solidnej pomocy bez nadmiernych kosztów.
                   </p>
                   <h3 class="costs-cost">Od 100zł / brutto</h3>
                   <span class="cost-time">za miesiąc</span>
@@ -223,8 +223,8 @@
                 <div class="costs-box">
                   <div class="costs-level">Profesjonalny</div>
                   <p class="costs-description">
-                    Zapewniamy kompleksową diagnostykę, naprawę, instalację
-                    oprogramowania, oraz priorytetowe wsparcie online.
+                    Kompleksowa diagnostyka, naprawa, instalacja oprogramowania,
+                    oraz priorytetowe wsparcie online.
                   </p>
                   <h3 class="costs-cost">Od 200zł / brutto</h3>
                   <span class="cost-time">za miesiąc</span>
