added shop section

--- a/index.html
+++ b/index.html
@@ -336,6 +336,52 @@
             </div>
           </div>
         </section>
+        <section id="shop" class="shop">
+          <div class="shop-columns">
+            <div class="shop-left-side">
+              <span class="shop-subtitlte">Nasz sklep</span>
+              <h2 class="shop-title">
+                Sklep Technologiczny i Ekspert Wsparcia
+              </h2>
+              <p class="shop-description">
+                Oferujemy szeroki wybór komputerów, dostosowanych do
+                różnorodnych potrzeb i oczekiwań. Bez względu na to, czy jesteś
+                profesjonalistą, entuzjastą gier, czy po prostu szukasz
+                solidnego sprzętu do codziennego użytku – mamy coś dla Ciebie.
+                Nasze komputery są starannie wyselekcjonowane, aby zapewnić
+                najwyższą wydajność i niezawodność.
+              </p>
+              <p class="shop-description shop-description-desktop">
+                Zanurz się w świecie naszego sklepu, gdzie technologia łączy się
+                z inspiracją, a innowacyjność staje się standardem. Dziękujemy
+                za wybór naszego sklepu, gdzie Twoje potrzeby technologiczne są
+                naszym priorytetem!
+              </p>
+
+              <a href="#" class="go-to-shop-desktop"
+                >Przejdź do sklepu<span class="material-symbols-outlined">
+                  east
+                </span></a
+              >
+            </div>
+            <div class="shop-img-container">
+              <img src="mac.svg" alt="Zdjęcie laptopa" class="first-shop-img" />
+              <p class="shop-description shop-description-mobile">
+                Zanurz się w świecie naszego sklepu, gdzie technologia łączy się
+                z inspiracją, a innowacyjność staje się standardem. Dziękujemy
+                za wybór naszego sklepu, gdzie Twoje potrzeby technologiczne są
+                naszym priorytetem!
+              </p>
+              <img src="mac2.svg" alt="Zdjęcie laptopa" />
+            </div>
+          </div>
+          <button class="shop-btn-mobile">
+            <a href="#"
+              >Przejdź do sklepu
+              <span class="material-symbols-outlined"> east </span></a
+            >
+          </button>
+        </section>
       </main>
     </div>
     <script
