added footer on mobile

--- a/index.html
+++ b/index.html
@@ -383,6 +383,49 @@
           </button>
         </section>
       </main>
+      <footer class="footer">
+        <div class="hours">
+          <h3>Godziny otwarcia:</h3>
+          <div class="hours-details">
+            <span>Poniedziałek - Piątek: 8:00 - 22:00</span>
+            <span>Sobota: 10:00 - 20:00</span>
+            <span>Niedziela: 10:00 - 20:00</span>
+          </div>
+        </div>
+        <div class="contact">
+          <h3>Kontakt</h3>
+          <div class="contact-details">
+            <div class="contact-item">
+              <img src="phone.svg" alt="ikona telefonu" />
+              <a href="tel:+48123456789">+48 123 456 789</a>
+            </div>
+            <div class="contact-item">
+              <img src="mail.svg" alt="ikona koperty pocztowej" />
+              <a href="mailto:biuro@serwiskak.pl">biuro@serwiskak.pl</a>
+            </div>
+            <div class="contact-item">
+              <img src="fb.svg" alt="ikona facebooka" />
+              <a href="#">Serwis komputerowy Adrian Keller</a>
+            </div>
+          </div>
+        </div>
+        <div class="map">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2326.3404512110956!2d18.620594577199654!3d54.33329050042187!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46fd73f2abbc5d51%3A0x2d4f5343ae0b5d03!2s80-001%20Gda%C5%84sk!5e0!3m2!1spl!2spl!4v1707034711596!5m2!1spl!2spl"
+            width="600"
+            height="450"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+        </div>
+        <div class="copyright">
+          <p>
+            © 2024 Serwis Komputerowy Adrian Keller, Wszelkie prawa zastrzeżone
+          </p>
+        </div>
+      </footer>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
