--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             zoptymalizować procesy i osiągnąć sukces.
           </p>
           <button class="header-content-btn">
-            <a href="#">Czytaj więcej</a>
+            <a href="#history">Czytaj więcej</a>
             <span class="material-symbols-outlined"> east </span>
           </button>
         </section>
@@ -435,6 +435,9 @@
           </p>
         </div>
       </footer>
+      <a href="#" class="back-to-top">
+        <img src="arrow-up.svg" alt="Strzałka w górę" />
+      </a>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
